<resources>
    <string name="app_name">Bookings</string>
    <string name="mp_logo">mp_logo</string>
    <string name="the_speed_you_can_t_believe">The Speed You Can\'t Believe</string>
    <string name="del_boy_logo">del_boy_logo</string>
    <string name="v1_0_0">v1.0.0</string>
    <string name="micro_parcel">MICRO PARCEL</string>
    <string name="client_login">CLIENT LOGIN</string>
    <string name="create_new_account">Create new account…</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="password_dt">Password</string>
    <string name="email_example_com">email@example.com</string>
    <string name="email">Email</string>
    <string name="menu">menu_</string>
    <string name="create_order">Create Order</string>
    <string name="your_orders">Your Orders</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_pickup_location">Pickup Location</string>
    <string name="select_drop_location">Drop Location</string>
    <string name="you_selected">You Selected</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="todo">TODO</string>
    <string name="select_material_type">Select Material Type</string>
    <string name="bike">Bike</string>
    <string name="loading_rickshaw">Loading</string>
    <string name="m_pickup">M Pickup</string>
    <string name="al_dost">AL Dost</string>
    <string name="tata_ace">Tata Ace</string>
    <string name="_0_000_kgs">0.000 KGs</string>
    <string name="_0ft_0ft_0ft">0Ft x 0Ft x 0Ft</string>
    <string name="selected_vehicle">Selected Vehicle</string>
    <string name="arrive_in_2_min">Can Arrive in 2 min</string>
    <string name="proceed">Proceed</string>
    <string name="capacity_0_00_tons">Capacity: 0.00 tons</string>
    <string name="max_height_0_00ft">Height: 0.00ft</string>
    <string name="max_width_0_00ft">Width: 0.00ft</string>
    <string name="max_lenght_0_00ft">Lenght: 0.00ft</string>
    <string name="closed_body">Closed Body</string>
    <string name="open_body">Open Body</string>
    <string name="cancel">Select</string>
    <string name="bike_cap">Capacity: 30.0 Kgs</string>
    <string name="bike_height">Height: 25 Inches</string>
    <string name="bike_width">Width: 15 Inches</string>
    <string name="bike_length">Length: 20 Inches</string>
    <string name="bike_del">Delivery Bike</string>
    <string name="goods_type">Goods Type</string>
    <string name="payment_method">Payment Method</string>
    <string name="insurance">Insurance</string>
    <string name="fare_estimate">FARE ESTIMATE</string>
    <string name="_0_00">₹ 0.00</string>
    <string name="_0_00est">loading...</string>
    <string name="rounded_off">Rounded Off</string>
    <string name="taxes">Taxes</string>
    <string name="bill_details">Bill Details</string>
    <string name="carrier_fare">Carrier Fare</string>
    <string name="total_bill">Total Bill</string>
    <string name="loading_unloading">Loading/Unloading</string>
    <string name="insurance_premium">Insurance Premium</string>
    <string name="total_payable">Total Payable</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="cash_on_pickup">Cash on Pickup</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="select_payment_method_app">Select</string>
    <string name="proceed_now">Proceed Now</string>
    <string name="item">Item</string>
    <string name="insure_goods_during_this_trip_up_to_5_00_lakhs_at_an_attractive_premium_of_12_0">Insure goods during this trip up to ₹5.00 lakhs at an attractive premium of ₹12.0</string>
    <string name="customer_name">Customer Name</string>
    <string name="mp_money">MP Money</string>
    <string name="connect_paytm">Connect Paytm</string>
    <string name="rate_card">Rate card</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>

</resources>
