<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/vehicle_name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/selected_vehicle"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:padding="2dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/select_vehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_name_TextView"
        app:srcCompat="@drawable/ic_loading_delivery" />

    <TextView
        android:id="@+id/vehicle_capacity_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/capacity_0_00_tons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/max_height_0_00ft"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/vehicle_capacity_TextView"
        app:layout_constraintStart_toStartOf="@+id/vehicle_capacity_TextView"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_capacity_TextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/max_width_0_00ft"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/vehicle_capacity_TextView"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_capacity_TextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/max_lenght_0_00ft"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/vehicle_capacity_TextView"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_capacity_TextView" />

    <RadioGroup
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/nogravity_border_primary"
            android:text="@string/closed_body"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/nogravity_border_primary"
            android:text="@string/open_body"
            android:textAlignment="center" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>